cluster/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.middlewares: traefik-external-f2b-kuma@kubernetescrd, traefik-external-public-chain@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-domeneshop

spec:
  ingressClassName: traefik-external
  rules:
    - host: status.nebulahvelvet.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
  tls:
    - secretName: uptime-kuma-tls
      hosts:
        - status.nebulahvelvet.no
